[gd_scene load_steps=5 format=3 uid="uid://bdycgvb1g25w"]

[ext_resource type="Script" uid="uid://dcw2hfmbwc2pm" path="res://maze_3d/maze_3d.gd" id="1_0k1os"]
[ext_resource type="PackedScene" uid="uid://cfnbpemvoy1i6" path="res://multi_mesh_shape/multi_mesh_shape.tscn" id="2_2b0r0"]

[sub_resource type="MultiMesh" id="MultiMesh_2b0r0"]
resource_local_to_scene = true

[sub_resource type="MultiMesh" id="MultiMesh_7je7j"]
resource_local_to_scene = true

[node name="Maze3D" type="Node3D"]
script = ExtResource("1_0k1os")

[node name="WallContainer" type="Node3D" parent="."]

[node name="PillarContainer" type="Node3D" parent="."]

[node name="Floor" parent="." instance=ExtResource("2_2b0r0")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
multimesh = SubResource("MultiMesh_2b0r0")

[node name="Ceiling" parent="." instance=ExtResource("2_2b0r0")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
multimesh = SubResource("MultiMesh_7je7j")
